# fugue-mptp

./: Cargo.toml  README.md
src/: lib.rs  sources.rs
