[package]
name = "fugue-mptp"
version = "0.3.0"
edition = "2021"

[dependencies]
anyhow = "1"
easy-parallel = "3"
flume = "0.11"
ipc-channel = "0.19"
nix = { version = "0.29", features = ["process"] }
num_cpus = "1"
rand = "0.8"
rmp-serde = "1.3"
serde = { version = "1", features = ["derive"] }
thiserror = "1"
uuid = { version = "1", features = ["serde", "v7"] }
walkdir = "2.5"
